[tool.poetry]
name = "sag-py-cache-decorator"
version = "0.3.2"
description = "A decorator to cache method call results with similar parameters"
authors = ["Samhammer AG"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
build = ">=1.2.2.post1"
coverage = "*"
coverage-lcov = "*"
mock = "*"
mypy = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
ruff = "*"
toml = "*"
types-mock = "*"
zipp = ">=3.21.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
